Fix hoverable images z-indexes

--- a/src/sass/modules/_global_modules.scss
+++ b/src/sass/modules/_global_modules.scss
@@ -20,6 +20,7 @@
 			color: $body_bg;
 			padding: $base_line_height $base_line_height ( $base_line_height / 2 ) $base_line_height;
 			background-image: linear-gradient( to bottom, rgba( 0,0,0,0 ) 0%, rgba( 0,0,0, 0.5 ) 100% );
+			z-index: 100;
 
 				&__heading {
 					font-size: 30px;
@@ -56,6 +57,7 @@
 					background: rgba( $link_color, 0.5 );
 					opacity: 0;
 					transition: opacity $transition;
+					z-index: 50;
 				}
 
 				&:hover::before {
